<resources>
    <string name="app_name_ru">Teacher\'s Book</string>
    <string name="app_name_ky">Teacher\'s Book</string>
    <string name="tv_remove_group_title">Удалить %1$d груп?</string>
    <string name="tv_remove_subject_title">Удалить %1$d дисципли?</string>
    <string name="tv_remove_group_btn">Удалить</string>
    <string name="tv_remove_group_btn_cancel">Отменить</string>
    <string name="tv_editing">Редактирование</string>
    <string name="tv_rename_group">Переименовать группу</string>
    <string name="tv_rename_subject">Переименовать дисциплину</string>
    <string name="tv_select_of_rename">Подтвердить изменение</string>
    <string name="group_name">Название группы</string>
    <string name="search_student">Поиск студента</string>
    <string name="lesson_name">Напишите название дисциплины </string>
    <string name="menu_group_txt">Группы</string>
    <string name="menu_subject_txt">Дисциплины</string>
    <string name="calendar_date">27 Сентября 2022</string>
    <string name="add_student">Добавить студента</string>
    <string name="title_groups">Группы</string>
    <string name="create_group">Создать группу</string>
    <string name="new_group">Новая группа</string>
    <string name="put_grades">Поставить балл</string>
    <string name="students_name">Имя студента</string>
    <string name="save">Сохранить</string>
    <string name="subject">Дисциплины</string>
    <string name="title">Название</string>
    <string name="add">Добавить</string>
    <string name="subject_name">Название дисциплины</string>
    <string name="new_subject">Новая дисциплина</string>
    <string name="hint_surname">Фамилия студента</string>
    <string name="hint_name">Имя студента</string>
    <string name="hint_name_group_re">Названия группы</string>
    <string name="hint_name_subject_re">Названия дисциплины</string>
    <string name="hint_name_group">Введите название группы</string>
    <string name="grades_1">1</string>
    <string name="grades_2">2</string>
    <string name="grades_3">3</string>
    <string name="grades_4">4</string>
    <string name="grades_5">5</string>
    <string name="grades_6">6</string>
    <string name="grades_7">7</string>
    <string name="grades_8">8</string>
    <string name="grades_9">9</string>
    <string name="grades_10">10</string>
    <string name="tv_mon">Пн</string>
    <string name="tv_td">Вт</string>
    <string name="tv_wd">Ср</string>
    <string name="tv_thd">Чт</string>
    <string name="tv_fd">Пт</string>
    <string name="tv_std">Сб</string>
    <string name="tv_snd">Вс</string>
    <string name="choose_the_type_of_classes">Типы учебных занятий</string>
    <string name="tv_lecture">Лекции</string>
    <string name="tv_laboratory">Лабораторные занятия</string>
    <string name="tv_practical">Практические занятия</string>
    <string name="tv_practical_with_two_dots">Практические занятия:</string>
    <string name="btn_continue">Далее</string>
    <string name="tv_choose_subject">Выберите дисциплины</string>
    <string name="btn_txt_confirm_changes">Подтвердить изменения</string>
    <string name="tv_select_a_rating">Выберите оценку</string>
    <string name="txt_editing">Изменение</string>
    <string name="txt_deleting">Удаление</string>
    <string name="tv_rename_student">Переименовать студента</string>
    <string name="hint_name_student">Имя студента</string>
    <string name="hint_surname_student">Фамилия студента</string>
    <string name="tv_delete_student">Удалить %1$d студент</string>
    <string name="tv_seminar">Семинарские занятия</string>
    <string name="lecture">Лекция</string>
    <string name="laboratory">Лабораторные</string>
    <string name="practical">Практические</string>
    <string name="seminar">Семинарские</string>
    <string name="laboratory_lessons_with_dots">Лабораторные занятия: </string>
    <string name="choose">Выбрать</string>
    <string name="cancel">Отмена</string>
    <string name="choose_a_student">Выберите студента</string>
    <string name="students_full_name">ФИО Студента</string>
    <string name="mark">Отметка</string>
    <string name="grades">Баллы</string>
    <string name="date">Дата</string>
    <string name="student_added">Студент добавлен!</string>
    <string name="add_another_student">Добавить еще студента</string>
    <string name="tv_weekdays">Пт</string>
    <string name="_11_24">11.24</string>
    <string name="_1">1</string>
    <string name="btn_close">Закрыть</string>
    <string name="tv_example_date">Ноябрь 2023</string>
    <string name="tv_fcs_student">Имя\nСтудента</string>
    <string name="_0">0</string>
    <string name="tv_estimation_point">н/а</string>
    <string name="tv_estimation">Оценка</string>
    <string name="tv_visits">Посещение</string>
    <string name="tv_total_score">Общий балл</string>
    <string name="tv_additionally">Доп</string>
    <string name="tv_final_control">Экзамен"</string>
    <string name="et_module_second">Модуль 2</string>
    <string name="et_module_first">Модуль 1</string>
    <string name="tv_group">Группа</string>
    <string name="tv_example_name_group">ИСТм 22</string>
    <string name="tv_excellent">Отлично</string>
    <string name="tv_good">Хорошо</string>
    <string name="tv_satisfactory">Удовлетворительно</string>
    <string name="tv_unsatisfactory">Неудовлетворительно</string>
    <string name="rv_general_practice">Общая практика</string>
    <string name="tv_november_general_practice">20 ноябрь</string>
    <string name="tv_6_general_practice">6</string>
    <string name="general_statistics">Общая статистика</string>
    <string name="student_performance">успеваемость студента</string>
    <string name="group_example_name">Группа: </string>
    <string name="lecture_lessons">Лекционные занятия</string>
    <string name="november_2023">Ноябрь 2023</string>
    <string name="general_visits">Общее\nпосещение:</string>
    <string name="example_visits_36">36</string>
    <string name="tv_visits_for_the_semester">Посещений за семестр: </string>
    <string name="tv_visits_for_the_month_example_number_21">21</string>
    <string name="tv_absences_for_the_semester">Пропуски за семестр: </string>
    <string name="tv_absences_for_the_month_example_15">15</string>
    <string name="general_visits_example_43">43</string>
    <string name="tv_visits_for_the_month_34">34</string>
    <string name="tv_absences_for_the_month_example_17">17</string>
    <string name="general_visits_example_23">23</string>
    <string name="tv_visits_for_the_month_example_34">34</string>
    <string name="points">Баллы: </string>
    <string name="read_more">Подробнее</string>
    <string name="seminar_lessons">Семинарские занятия:</string>
    <string name="student_succeeds">Преуспевает</string>
    <string name="student_behind">Отстает</string>
    <string name="learning_metrics">Учебные <br></br> показатели</string>
    <string name="general_indicators">Общие <br></br> показатели</string>
    <string name="november_20">20 Ноября</string>
    <string name="tv_group_statistic">Статистика группы</string>
    <string name="tv_number_of_students">Количество студентов: </string>
    <string name="tv_number_of_students_example_16">16</string>
    <string name="tv_visits_statistic">Статистика посещений</string>
    <string name="tv_average_visits">В среднем посещений: </string>
    <string name="tv_average_absence">В среднем отсутствий: </string>
    <string name="tv_average_points_in_group">Средний балл группы</string>
    <string name="tv_point">Баллы: </string>
    <string name="tv_teacher_electronic_journal">Электронный журнал\nпреподавателя</string>
    <string name="choose_language_in_kyrgyz">Тил тандоо</string>
    <string name="choose_language_in_russian">Выбор языка</string>
    <string name="btn_in_kyrgyz">Кыргызча</string>
    <string name="btn_in_russian">Русский</string>
    <string name="tv_choose_font_size">Выберите\nразмер шрифта</string>
    <string name="btn_big_size">Крупный</string>
    <string name="btn_standart_size">Стандартный</string>
    <string name="tv_example_text_size">Данный текст пример\nразмера шрифта</string>
    <string name="btn_continue_text">Продолжить</string>
    <string name="tv_about_this_app">Teacher’s Book - электронная\nкнижка преподавателя для учета\nпосещения и успеваемости\nстудентов в процессе обучения.</string>
    <string name="tv_0_general_practice">0</string>
    <string name="font_size">Размер шрифта</string>
    <string name="possible_only_up_to_10_points">Возможен только до 10 баллов</string>
    <string name="large">Крупный</string>
    <string name="standard">Стандартный</string>
    <string name="language">Язык</string>
    <string name="kyrgyz_language">Кыргызча</string>
    <string name="russian_language">Русский</string>
    <string name="search">Поиск</string>
    <string name="hint_search">Поиск...</string>
    <string name="settings">Настройка</string>
    <string name="rv_general_laboratory">Общая лабораторная</string>
    <string name="tv_if_empty">"Заполните поле "</string>
    <string name="tv_if_empty_group">Введите название группы\n</string>
    <string name="empty_field_error_msg">Пожалуйста, выберите дисциплину</string>
    <string name="toast_subjes_added">Дисциплина добавлена!</string>
    <string name="toasts_group_added">Группа добавлена!</string>
    <string name="button_text_start_work">Начать работу</string>
    <string name="something_went_wrong">Что-то пошло не так!</string>
    <string name="select_a_grades_to_give">Выберите балл чтобы поставить!</string>
    <string name="choose_type_classes">Выберите типы занятий.</string>
    <string name="saved">Сохранено!</string>
    <string name="error_msg">Не выбран тип занятий, невозможно отобразить</string>
    <string name="rv_general_seminary">Общие семинарские</string>
    <string name="error_msg_empty">Поставьте балл, или попробуйте еще раз</string>
    <string name="student_performance_statistics">Статистика успеваемости студента</string>
    <string name="group_performance_statistics">Статистика успеваемости группы</string>
    <string name="group_behind">Отстаёт</string>
    <string name="group_doing_well">Преуспевает</string>
    <string name="show_general_good">Хор.</string>
    <string name="show_general_very_good">Отл.</string>
    <string name="show_general_satisfactory">Удовл.</string>
    <string name="show_general_unsatisfied">Неудов.</string>
    <string name="toast_choose_type_classes">Выберите типы занятий.</string>
    <string name="toast_choose_one_student">Выберите одного студента</string>
    <string name="toast_max_choose_type_lesson">Максимальное количество типов занятий: 3</string>
    <string name="toast_max_points_30">Оценка — не более 30 баллов.</string>
    <string name="toast_max_ponts_40">Оценка — не более 40 баллов</string>
    <string name="toast_max_points_20">Оценка — не более 20 баллов</string>
    <string name="error_if_point">Баллы студенту не проставлены. Вернуться к экрану студентов?</string>
    <string name="error_title">Внимание!</string>
    <string name="agree">Вернуться</string>
    <string name="empty_layout_massege">Пожалуйста, добавьте дисциплину</string>
    <string name="empty_layout_massege_group">Пожалуйста, добавьте группу</string>
    <string name="empty_layout_massege_student">Пожалуйста, добавьте студента</string>
    <string name="title_no_visits">В этом месяце не было занятий\nили не были отмечены студенты</string>
    <string name="tv_edit_visits">Изменить посещение</string>
    <string name="tv_absence">Отсутствовал</string>
    <string name="tv_visit">Присутствовал</string>
    <string name="tv_if_search_empty">По запросу студнеты не найдены</string>
    <string name="tv_made_by_geeks_pro">MADE BY GEEKS PRO</string>
</resources>