<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:elevation="10dp">

            <TextView
                android:id="@+id/tv_title_alert_dialog_to_assign_grades"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/put_grades"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_back"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="start"
                android:background="@drawable/ic_close"
                app:backgroundTint="@color/black"
                app:layout_constraintBottom_toBottomOf="@id/tv_title_alert_dialog_to_assign_grades"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_title_alert_dialog_to_assign_grades" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_name_student"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/students_name"
            android:textColor="@color/blue"
            android:textSize="16sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio_button_1"
                style="@style/radio_button_grades"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grades_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioButton
                android:id="@+id/radio_button_2"
                style="@style/radio_button_grades"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grades_2"
                app:layout_constraintEnd_toStartOf="@+id/radio_button_3"
                app:layout_constraintStart_toEndOf="@+id/radio_button_1"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioButton
                android:id="@+id/radio_button_3"
                style="@style/radio_button_grades"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grades_3"
                app:layout_constraintEnd_toStartOf="@+id/radio_button_4"
                app:layout_constraintStart_toEndOf="@+id/radio_button_2"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioButton
                android:id="@+id/radio_button_4"
                style="@style/radio_button_grades"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grades_4"
                app:layout_constraintEnd_toStartOf="@+id/radio_button_5"
                app:layout_constraintStart_toEndOf="@+id/radio_button_3"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioButton
                android:id="@+id/radio_button_5"
                style="@style/radio_button_grades"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grades_5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioButton
                android:id="@+id/radio_button_6"
                style="@style/radio_button_grades"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/grades_6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radio_button_1" />

            <RadioButton
                android:id="@+id/radio_button_7"
                style="@style/radio_button_grades"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/grades_7"
                app:layout_constraintEnd_toStartOf="@+id/radio_button_8"
                app:layout_constraintStart_toEndOf="@+id/radio_button_6"
                app:layout_constraintTop_toBottomOf="@+id/radio_button_2" />

            <RadioButton
                android:id="@+id/radio_button_8"
                style="@style/radio_button_grades"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/grades_8"
                app:layout_constraintEnd_toStartOf="@+id/radio_button_9"
                app:layout_constraintStart_toEndOf="@+id/radio_button_7"
                app:layout_constraintTop_toBottomOf="@+id/radio_button_3" />

            <RadioButton
                android:id="@+id/radio_button_9"
                style="@style/radio_button_grades"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/grades_9"
                app:layout_constraintEnd_toStartOf="@+id/radio_button_10"
                app:layout_constraintStart_toEndOf="@+id/radio_button_8"
                app:layout_constraintTop_toBottomOf="@+id/radio_button_4" />

            <RadioButton
                android:id="@+id/radio_button_10"
                style="@style/radio_button_grades"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/grades_10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radio_button_5" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save_grades"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/blue"
            android:paddingVertical="16dp"
            android:text="@string/save"
            android:textSize="16sp"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent" />

    </LinearLayout>

</androidx.cardview.widget.CardView>