<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_text_view_visits_white">

    <TextView
        android:id="@+id/tv_weekday"
        android:layout_width="60dp"
        android:layout_height="64dp"
        android:background="@drawable/bg_text_view_visits_blue"
        android:gravity="center"
        android:text="@string/tv_weekdays"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="100dp"
        android:layout_height="64dp"
        android:background="@drawable/bg_text_view_visits_gray"
        android:gravity="center"
        android:text="@string/november_20"
        android:textColor="@color/blue"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_weekday"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/tv_visits"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:background="@drawable/bg_text_view_visits_white"
        android:gravity="center"
        android:text="@string/_1"
        android:textColor="@color/green"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_date"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>