<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="16dp"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/tv_title_alert_dialog_add_student"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/add_student"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_back"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="start"
                android:background="@drawable/ic_close"
                app:backgroundTint="@color/black"
                app:layout_constraintBottom_toBottomOf="@id/tv_title_alert_dialog_add_student"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_title_alert_dialog_add_student" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:background="@drawable/bg_edit_text_list"
            android:hint="@string/hint_name"
            android:inputType="text"
            android:maxLines="1"
            android:padding="16dp"
            android:paddingVertical="8dp"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:background="@drawable/bg_edit_text_list"
            android:hint="@string/hint_surname"
            android:inputType="text"
            android:maxLines="1"
            android:padding="16dp"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add_student"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/blue"
            android:fontFamily="@font/roboto_medium"
            android:paddingVertical="16dp"
            android:text="@string/add"
            android:textSize="16sp"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent" />

    </LinearLayout>

</androidx.cardview.widget.CardView>