<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/alert_dialog_rename_group"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="16dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp">

            <TextView
                android:id="@+id/tv_title_alert_dialog_rename_student"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:fontFamily="@font/roboto_medium"
                android:paddingStart="5dp"
                android:text="@string/tv_rename_student"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_back"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/ic_close"
                app:backgroundTint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edit_text_list"
            android:ellipsize="end"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/hint_name_student"
            android:inputType="textNoSuggestions"
            android:maxLines="1"
            android:padding="16dp"
            android:textColor="@color/black"
            android:textColorHint="@color/blue"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_edit_text_list"
            android:ellipsize="end"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/hint_surname_student"
            android:inputType="textNoSuggestions"
            android:maxLines="1"
            android:padding="16dp"
            android:textColor="@color/black"
            android:textColorHint="@color/blue"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_edit_student"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/blue"
            android:ellipsize="end"
            android:fontFamily="@font/roboto_medium"
            android:maxLines="1"
            android:paddingVertical="16dp"
            android:text="@string/tv_select_of_rename"
            android:textSize="16sp"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent" />

    </LinearLayout>

</androidx.cardview.widget.CardView>